Update ascertainable, excluded, and discoverable phenotypes methods and tests.