@@ -8,14 +8,12 @@ import org.monarchinitiative.maxodiff.core.TestResources;
 import org.monarchinitiative.maxodiff.core.model.SamplePhenopacket;
 import org.monarchinitiative.phenol.annotations.formats.hpo.HpoDisease;
 import org.monarchinitiative.phenol.annotations.formats.hpo.HpoDiseases;
-import org.monarchinitiative.phenol.base.PhenolRuntimeException;
 import org.monarchinitiative.phenol.ontology.data.TermId;
 
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Supplier;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -23,11 +21,14 @@ import static org.junit.jupiter.api.Assertions.*;
 public class DiscoverablePhenotypesTest {
 
      private final static HpoDiseases hpoDiseases = TestResources.hpoDiseases();
-     private final static Map<SimpleTerm, Set<SimpleTerm>> hpoToMaxoTermMap = TestResources.hpoToMaxo();
+     private final static Map<SimpleTerm, Set<SimpleTerm>> hpoToMaxoTermMap = TestResources.hpoToMaxoToy();
 
-     private final static PotentialPhenotypes potentialPhenotypes = new PotentialPhenotypes(hpoDiseases);
+     private final static AscertainablePhenotypes ASCERTAINABLE_PHENOTYPES = new AscertainablePhenotypes(hpoDiseases);
      private final static ExcludedPhenotypes excludedPhenotypes = new ExcludedPhenotypes(hpoDiseases, hpoToMaxoTermMap);
 
+    /**
+     * This tests if the right disease is obtained from HpoDiseases, and if it has the correct HPO TermIds.
+     */
      @Test
      public void testFindDisease() {
          //Sanity check: can we get the right disease from HpoDiseases, and does it have the right HPO Term Ids?
@@ -37,14 +38,18 @@ public class DiscoverablePhenotypesTest {
          var disease = returnedDiseaseIdOpt.get();
          List<TermId> termIdList = disease.annotationTermIdList();
          assertEquals(13, termIdList.size());
-         assertTrue(termIdList.contains(TermId.of("HP:0006739")), "Did not find HP:0006739");
-         assertTrue(termIdList.contains(TermId.of("HP:0002863")), "Did not find HP:0002863");
-         assertTrue(termIdList.contains(TermId.of("HP:0100651")), "Did not find HP:0100651");
+         assertTrue(termIdList.contains(TermId.of("HP:0001888")), "Did not find HP:0001888");
+         assertTrue(termIdList.contains(TermId.of("HP:0001903")), "Did not find HP:0001903");
+         assertTrue(termIdList.contains(TermId.of("HP:0001873")), "Did not find HP:0001873");
      }
 
+    /**
+     *
+     * @return Sample phenopacket with one included HPO term Id and one disease Id.
+     */
     public static SamplePhenopacket getPPkt1() {
         List<TermId> presentTerms = List.of(
-                TermId.of("HP:0006739")
+                TermId.of("HP:0001888")
         );
         List<TermId> excludedTerms = List.of();
         List<TermId> diseaseIds = List.of(TermId.of("OMIM:620365"));
@@ -52,10 +57,14 @@ public class DiscoverablePhenotypesTest {
         return new SamplePhenopacket("sample1", presentTerms, excludedTerms, diseaseIds);
     }
 
+    /**
+     *
+     * @return Sample phenopacket with two included HPO term Ids and one disease Ids.
+     */
     public static SamplePhenopacket getPPkt2() {
         List<TermId> presentTerms = List.of(
-                TermId.of("HP:0006739"),
-                TermId.of("HP:0002863")
+                TermId.of("HP:0001888"),
+                TermId.of("HP:0001903")
         );
         List<TermId> excludedTerms = List.of();
         List<TermId> diseaseIds = List.of(TermId.of("OMIM:620365"));
@@ -63,9 +72,13 @@ public class DiscoverablePhenotypesTest {
         return new SamplePhenopacket("sample1", presentTerms, excludedTerms, diseaseIds);
     }
 
+    /**
+     *
+     * @return Sample phenopacket with one included HPO term Id and one dummy disease Id.
+     */
     public static SamplePhenopacket getPPktEmptyDisease() {
         List<TermId> presentTerms = List.of(
-                TermId.of("HP:0006739")
+                TermId.of("HP:0001888")
         );
         List<TermId> excludedTerms = List.of();
         List<TermId> diseaseIds = List.of();
@@ -73,13 +86,16 @@ public class DiscoverablePhenotypesTest {
         return new SamplePhenopacket("sample2", presentTerms, excludedTerms, diseaseIds);
     }
 
+    /**
+     * This tests getting the discoverable phenotypes for the sample phenopacket with one included HPO term.
+     */
     @Test
     public void testDiscoverablePhenotypes1() {
          // Get excluded phenotypes given phenopacket
          SamplePhenopacket s1 = getPPkt1();
-         TermId targetId = s1.diseaseIds().get(0);
-         Set<TermId> potentialPhenotypeIds = potentialPhenotypes.getPotentialPhenotypeIds(s1, targetId);
-         Set<TermId> excludedPhenotypeIds = excludedPhenotypes.getExcludedPhenotypeIds(s1, targetId);
+         TermId targetId = s1.diseaseIds().getFirst();
+         Set<TermId> potentialPhenotypeIds = ASCERTAINABLE_PHENOTYPES.getAscertainablePhenotypeIds(s1, targetId);
+         Set<TermId> excludedPhenotypeIds = excludedPhenotypes.getExcludedPhenotypes(s1);
          Set<TermId> discoverablePhenotypeIds = DiscoverablePhenotypes.getDiscoverablePhenotypeIds(
                 potentialPhenotypeIds,
                 excludedPhenotypeIds);
@@ -88,21 +104,26 @@ public class DiscoverablePhenotypesTest {
 //         System.out.println(discoverablePhenotypeIds);
          // HPO term in phenopacket can be ascertained by 2 Maxo terms (MAXO:0000671 and MAXO:0000691)
          // 67 total HPO terms can ascertained by both Maxo terms
-         assertEquals(10, discoverablePhenotypeIds.size());
+         assertEquals(11, discoverablePhenotypeIds.size());
      }
 
     public sealed interface TestOutcome {
-        record Ok(int nExludedTerms) implements TestOutcome {}
+        record Ok(int nExcludedTerms) implements TestOutcome {}
 //        record Error(Supplier<? extends PhenolRuntimeException> exceptionSupplier) implements TestOutcome {}
     }
 
     public record TestIndividual(String description, SamplePhenopacket myPPkt, TestOutcome expectedOutcome) {}
 
+    /**
+     *
+     * @return Stream of individual test results for 2 tests: discoverable phenotypes for ppkt with 1 HPO term,
+     * and discoverable phenotypes for ppkt with 2 HPO terms.
+     */
     private static Stream<TestIndividual> testGetIndividualDiseaseIds() {
         return Stream.of(
                 new TestIndividual("46 year old female, infantile onset (1 term)",
                         getPPkt1(),
-                        new TestOutcome.Ok(10)),
+                        new TestOutcome.Ok(11)),
                 new TestIndividual("46 year old female, infantile onset (2 terms)",
                         getPPkt2(),
                         new TestOutcome.Ok(10))
@@ -114,8 +135,8 @@ public class DiscoverablePhenotypesTest {
     void testEvaluateExpression(TestIndividual testCase) {
         SamplePhenopacket ppkti = testCase.myPPkt();
         TermId targetId = ppkti.diseaseIds().get(0);
-        Set<TermId> potentialPhenotypeIds = potentialPhenotypes.getPotentialPhenotypeIds(ppkti, targetId);
-        Set<TermId> excludedPhenotypeIds = excludedPhenotypes.getExcludedPhenotypeIds(ppkti, targetId);
+        Set<TermId> potentialPhenotypeIds = ASCERTAINABLE_PHENOTYPES.getAscertainablePhenotypeIds(ppkti, targetId);
+        Set<TermId> excludedPhenotypeIds = excludedPhenotypes.getExcludedPhenotypes(ppkti);
         Set<TermId> discoverablePhenotypeIds = DiscoverablePhenotypes.getDiscoverablePhenotypeIds(
                 potentialPhenotypeIds,
                 excludedPhenotypeIds);
